--- a/demo_one/tasks/config.yml
+++ b/demo_one/tasks/config.yml
@@ -31,7 +31,7 @@ features:
 
 feature-store:
              lookup_key: "PATIENT_ID"
-             table_name: "demo_table"
+             table_name: "demo_table1"
              online_table_name: "pharma_online_table"
 
 ModelTraining:
