--- a/demo_one/tasks/config.yml
+++ b/demo_one/tasks/config.yml
@@ -46,7 +46,7 @@ LogisticReg:
 
 
 Mlflow:
-        experiment_name:  "ModelTraining"
+        experiment_name:  "usecase3"
         run_name: "LogisticReg"
         data_drift_exp_name: "/Shared/dbx/Data-Drift-Evaluation-with-Evidently"
 
