--- a/demo_one/tasks/config.yml
+++ b/demo_one/tasks/config.yml
@@ -31,7 +31,7 @@ features:
 
 feature-store:
              lookup_key: "PATIENT_ID"
-             table_name: "demo_table1"
+             table_name: "demo_table10"
              online_table_name: "pharma_online_table"
 
 ModelTraining:
@@ -46,7 +46,7 @@ LogisticReg:
 
 
 Mlflow:
-        experiment_name:  "usecase3"
+        experiment_name:  "/Shared/dbx/usecase3"
         run_name: "LogisticReg"
         data_drift_exp_name: "/Shared/dbx/Data-Drift-Evaluation-with-Evidently"
 
