--- a/databricks-config.yml
+++ b/databricks-config.yml
@@ -1,3 +1,3 @@
 
-databricks_host: "https://dbc-bdf675da-86c8.cloud.databricks.com"
+databricks_host: "https://dbc-a562756b-a423.cloud.databricks.com"
 
