--- a/databricks-config.yml
+++ b/databricks-config.yml
@@ -1,3 +1,3 @@
 
-databricks_host: "https://dbc-b2f93773-e9bb.cloud.databricks.com"
+databricks_host: "https://dbc-e16a67c8-ff96.cloud.databricks.com"
 
