--- a/demo_one/tasks/config.yml
+++ b/demo_one/tasks/config.yml
@@ -32,7 +32,7 @@ features:
 feature-store:
              lookup_key: "PATIENT_ID"
              DB: 'pharma'
-             table_name: "pharma.demo_table"
+             table_name: "pharma.demo_table1"
              online_table_name: "pharma_online_table"
 
 ModelTraining:
