--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-plotly
-dbx
-boto3
-mlflow
+# streamlit
+# plotly
+# dbx
+# boto3
+# mlflow
+pyspark
 databricks
 databricks-sdk
 requests
