--- a/databricks-config.yml
+++ b/databricks-config.yml
@@ -1,3 +1,3 @@
 
-databricks_host: "https://dbc-fcfbf0b3-090c.cloud.databricks.com"
+databricks_host: "https://dbc-e78722a2-75b4.cloud.databricks.com"
 
