--- a/demo_one/tasks/config.yml
+++ b/demo_one/tasks/config.yml
@@ -55,10 +55,10 @@ Model_registry_name: 'pharma_model'
 
 
 deployment-pipeline:
-             job_id: 262256070931414
+             job_id: 712899834261127
 
 
-databricks-url: "https://dbc-24cfc68d-f51d.cloud.databricks.com/"
+databricks-url: "https://dbc-34a6125d-ed23.cloud.databricks.com/"
 
 
 Unittest:
