--- a/databricks-config.yml
+++ b/databricks-config.yml
@@ -1,3 +1,3 @@
 
-databricks_host: "https://dbc-34a6125d-ed23.cloud.databricks.com""
+databricks_host: "https://dbc-34a6125d-ed23.cloud.databricks.com"
 
